# onnxCLIP.cpp

./: .gitignore  CMakeLists.txt  CMakeLists3.txt  README.md
assets/: expected_preprocessed_image.txt
scripts/: npy_to_txt.py
src/: bin_to_tensor.cpp  clip_inference.cpp  main.cpp
src/inference/: model.cpp  model.hpp  preprocesor.hpp  preprocessor.cpp  preprocessor.hpp  tokeniser.cpp  tokeniser.h  tokenizer.cpp  tokenizer.hpp
tests/: preprocessor_test.cpp  tokenizer_test.cpp
